--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/beige.css">
+		<link rel="stylesheet" href="css/custom.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/monokai.css">
@@ -25,8 +25,41 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h2 style="line-height: 2em">
+						Chassis Driven Web API Development
+					</h2>
+					<p style="font-size: 0.85em">
+						Beautiful production ready serverless mvp's.
+						<br>FaaS + IaC = Glory
+					</p>
+					<small class="footnote">
+						<p>
+							Slides available <a href="http://webconf2020.groklobster.io">here</a> |
+							<span>
+
+
+									source available on <a href="https://github.com/delprofundo/webconf2020pres">github</a>
+
+							</span>
+						</p>
+						contact me: <a href="mailto:bruno@hypermedia.tech">bruno@hypermedia.tech</a> |
+						<span>
+							serverless chassis available on <a href="https://github.com/delprofundo/serverless_chassis"> github </a>
+						</span>
+					</small>
+				</section>
+				<section>
+					<section data-markdown="slides/topic_one_top.md"></section>
+					<section data-markdown="slides/home_down.md"></section>
+					<section
+							data-markdown="slides/top_one_third.md"
+							data-background-image="https://media1.giphy.com/media/90F8aUepslB84/200w.gif"
+					></section>
+				</section>
+				<section>
+					Slide 2
+				</section>
 			</div>
 		</div>
 
