basic shape and lauch page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>reveal.js</title>
+		<title>prod ready mvp's</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
@@ -35,17 +35,17 @@
 					</p>
 					<small class="footnote">
 						<p>
-							Slides available <a href="http://webconf2020.groklobster.io">here</a> |
+							Slides: <a href="http://webconf2020.groklobster.io">webconf2020.groklobster.io</a> |
 							<span>
 
 
-									source available on <a href="https://github.com/delprofundo/webconf2020pres">github</a>
+									slide source <a href="https://github.com/delprofundo/webconf2020pres">bit.ly/w3c-pres</a>
 
 							</span>
 						</p>
-						contact me: <a href="mailto:bruno@hypermedia.tech">bruno@hypermedia.tech</a> |
+						serverless chassis: <a href="https://github.com/delprofundo/serverless_chassis"> bit.ly/js-chassis </a> |
 						<span>
-							serverless chassis available on <a href="https://github.com/delprofundo/serverless_chassis"> github </a>
+							contact me: <a href="mailto:bruno@hypermedia.tech">bruno@hypermedia.tech</a>
 						</span>
 					</small>
 				</section>
