--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h2 style="line-height: 2em">
+					<h3 style="line-height: 2em">
 						Chassis Driven Web API Development
-					</h2>
+					</h3>
 					<p style="font-size: 0.85em">
 						Beautiful production ready serverless mvp's.
 						<br>FaaS + IaC = Glory
@@ -37,10 +37,7 @@
 						<p>
 							Slides: <a href="http://webconf2020.groklobster.io">webconf2020.groklobster.io</a> |
 							<span>
-
-
-									slide source <a href="https://github.com/delprofundo/webconf2020pres">bit.ly/w3c-pres</a>
-
+								slide source <a href="https://github.com/delprofundo/webconf2020pres">bit.ly/w3c-pres</a>
 							</span>
 						</p>
 						serverless chassis: <a href="https://github.com/delprofundo/serverless_chassis"> bit.ly/js-chassis </a> |
@@ -50,15 +47,31 @@
 					</small>
 				</section>
 				<section>
-					<section data-markdown="slides/topic_one_top.md"></section>
-					<section data-markdown="slides/home_down.md"></section>
-					<section
-							data-markdown="slides/top_one_third.md"
-							data-background-image="https://media1.giphy.com/media/90F8aUepslB84/200w.gif"
-					></section>
+					<section data-markdown>
+						<textarea data-template>
+							### Event Driven Serverless in 30 seconds
+
+							ok maybe five minutes <!-- .element: class="fragment" -->
+							<ul>
+								<div class="fragment">
+									<li>statelessness</li>
+									<li>function as a service</li>
+									<li>event driven</li>
+								</div>
+								<div class="fragment">
+									<li>extreme cost effectiveness</li>
+									<li>open source all the way down</li>
+									<li>dev = prod</li>
+									<li>architecture driven</li>
+								</div>
+							</ul>
+						</textarea>
+					</section>
 				</section>
 				<section>
-					Slide 2
+					<section data-markdown>
+						### What is a deployment chassis?
+					</section>
 				</section>
 			</div>
 		</div>
