--- a/index.html
+++ b/index.html
@@ -73,6 +73,26 @@
 						### What is a deployment chassis?
 					</section>
 				</section>
+				<section>
+					<section data-markdown>
+						### example use cases
+					</section>
+				</section>
+				<section>
+					<section data-markdown>
+						### consequences
+					</section>
+				</section>
+				<section>
+					<section data-markdown>
+						### takeaways
+					</section>
+				</section>
+				<section>
+					<section data-markdown>
+						### detailed demo and review
+					</section>
+				</section>
 			</div>
 		</div>
 
