--- a/index.html
+++ b/index.html
@@ -52,35 +52,141 @@
 							### Event Driven Serverless in 30 seconds
 
 							ok maybe five minutes <!-- .element: class="fragment" -->
+
 							<ul>
-								<div class="fragment">
-									<li>statelessness</li>
-									<li>function as a service</li>
-									<li>event driven</li>
-								</div>
-								<div class="fragment">
-									<li>extreme cost effectiveness</li>
-									<li>open source all the way down</li>
-									<li>dev = prod</li>
-									<li>architecture driven</li>
-								</div>
+								<li>business and operational implications</li>
+								<li>architecture driven</li>
+								<li>the cost of doing serverless business</li>
+							</ul>
+
+						</textarea>
+					</section>
+					<section data-markdown>
+						### business and operational implications
+
+						#### extreme cost reduction
+					</section>
+					<section data-markdown>
+						### business and operational implications
+
+						#### Dev === Prod
+					</section>
+					<section data-markdown>
+						### business and operational implications
+
+						#### resource policies must exist
+					</section>
+					<section data-markdown data-background-image="https://gph.is/1a4YOxQ">
+						### serverless - architecture driven
+
+						#### Functions and Infra as Code
+					</section>
+					<section data-markdown>
+						### serverless - architecture driven
+
+						#### Stateless-ness...
+					</section>
+					<section data-markdown>
+						### serverless - architecture driven
+
+						#### ...required to handle event driven approaches
+					</section>
+					<section data-markdown>
+						### serverless - architecture driven
+
+						#### open source all the way down
+					</section>
+					<section data-markdown>
+						### the cost of doing business
+
+						#### Extreme resource abstraction
+					</section>
+					<section data-markdown>
+						### the cost of doing business
+
+						#### a different type of coupling
+					</section>
+					<section data-markdown>
+						### the cost of doing business
+
+						#### testing and debugging options
+					</section>
+					<section data-markdown>
+						### the cost of doing business
+
+						#### plan for multi-tenancy
+					</section>
+				</section>
+				<section>
+					<section data-markdown>
+						<textarea data-template>
+							### What is a deployment chassis?
+
+							the deployment chassis answers the following questions
+
+							<ul>
+								<li>how do we arrange code, config and resources?</li>
+								<li>how do we apply developer tools?</li>
+								<li>how do we enable integration and deployment workflows?</li>
+								<li>how do we destructure our problem domain?</li>
 							</ul>
 						</textarea>
 					</section>
-				</section>
-				<section>
 					<section data-markdown>
-						### What is a deployment chassis?
+						### Arranging code, configuration and resources
+					</section>
+					<section data-markdown>
+						### developer tools
+					</section>
+					<section data-markdown>
+						### deployment tools
+					</section>
+					<section data-markdown>
+						### relationship to software architecture
+						#### Domains and bounded contexts
 					</section>
 				</section>
 				<section>
 					<section data-markdown>
-						### example use cases
+						### use cases and examples
+
+						- platform tools
+							- usually event driven
+							- operational or supportive
+						- web application and business workloads
+						- destructuring poorly designed solutions
+					</section>
+					<section data-markdown>
+						### Example Platform Tool
+						#### Service Usage Monitor
+					</section>
+					<section data-markdown>
+						### Example Web Application workload
+						#### Card tokenisation microservice
+					</section>
+					<section data-markdown>
+						### Example of destructuring a poorly designed solution
+						#### Expensive forms and bus
 					</section>
 				</section>
 				<section>
 					<section data-markdown>
 						### consequences
+
+						- developers become operations
+						- difficult to navigate enterprise design authorities
+						- true pay as you go
+							- 2 - 3 orders of magnitude cost savings
+						- demands solid domain design
+					</section>
+				</section>
+				<section>
+					<section data-markdown>
+						### feedback
+
+						- introduce simpler integration patterns
+						- enterprise does not like javascript
+						- but security and operations love it!
 					</section>
 				</section>
 				<section>
