--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 			<div class="slides">
 				<section>
 					<h3 style="line-height: 2em">
-						Chassis Driven Web API Development
+						production ready MVP's
 					</h3>
 					<p style="font-size: 0.85em">
-						Beautiful production ready serverless mvp's.
-						<br>FaaS + IaC = Glory
+						benefits of native serverless application development
+						<br><small>chassis and architecture driven engineering</small>
+						<br><br><br>
 					</p>
 					<small class="footnote">
 						<p>
@@ -45,6 +46,58 @@
 							contact me: <a href="mailto:bruno@hypermedia.tech">bruno@hypermedia.tech</a>
 						</span>
 					</small>
+				</section>
+				<section data-markdown>
+					### about me
+
+					- sysadmin as a child
+					- web infrastructure since late 90's
+					- payment processing since mid 2000's
+					- integration consultation since 2010
+					- cloud native architecture, eng and transformation since 2015
+					- feedback and observations in green
+
+					so im here to talk to you about the benefits of cloud native development. which for me means...
+
+				</section>
+				<section data-markdown>
+					### serverless...why?
+
+					#### mastery of serverless workoads give you:
+
+					- 2+ order of magnitude cost saving
+					- insanely low operational overhead
+					- improved security profile
+
+				</section>
+				<section data-markdown>
+					##### extreme abstraction
+
+
+
+
+
+				</section>
+				<section data-markdown>
+					##### warning - requires design discipline
+
+
+				</section>
+				<section data-markdown>
+					### themes
+
+					- business and operational benefits and implications
+					- what is a chassis
+					- key architectural concerns
+					- technical demonstration periodically
+				</section>
+				<section>
+					<h3>our example - generic banc</h3>
+
+					<div>
+						<img src=""
+					</div>
+
 				</section>
 				<section>
 					<section data-markdown>
