--- a/index.html
+++ b/index.html
@@ -60,28 +60,21 @@
 					so im here to talk to you about the benefits of cloud native development. which for me means...
 
 				</section>
-				<section data-markdown>
-					### serverless...why?
+				<section>
+					<h3>serverless...why?</h3>
 
-					#### mastery of serverless workoads give you:
-
-					- 2+ order of magnitude cost saving
-					- insanely low operational overhead
-					- improved security profile
-
-				</section>
-				<section data-markdown>
-					##### extreme abstraction
-
-
-
-
-
-				</section>
-				<section data-markdown>
-					##### warning - requires design discipline
-
-
+					<p>mastery of serverless workoads give you:</p>
+					<ul>
+						<li>2+ order of magnitude cost saving</li>
+						<li>insanely low operational overhead</li>
+						<li>improved security profile</li>
+					</ul>
+					<div id="left">
+						<p>extreme abstraction</p>
+					</div>
+					<div id="right">
+						<p> warning - required discipline</p>
+					</div>
 				</section>
 				<section>
 					<h3>themes</h3>
@@ -111,7 +104,6 @@
 					</div>
 				</section>
 				<section>
-					<section>
 						<h3>themes</h3>
 						<div>
 							<ul>
@@ -121,7 +113,7 @@
 								<li class="notlit">technical demonstration</li>
 							</ul>
 						</div>
-					</section>
+
 					<section>
 						<h3>benefits</h3>
 
@@ -159,10 +151,6 @@
 						</ul>
 					</section>
 					<section>
-						<h3>development becomes operations</h3>
-
-					</section>
-					<section>
 						<h3>challenges</h3>
 
 						<ul>
@@ -174,17 +162,15 @@
 					</section>
 				</section>
 				<section>
-					<section>
-						<h3>themes</h3>
-						<div>
-							<ul>
-								<li class="notlit">business and operational benefits and implications</li>
-								<li class="highlit">what is a chassis</li>
-								<li class="notlit">key architectural concerns</li>
-								<li class="notlit">technical demonstration</li>
-							</ul>
-						</div>
-					</section>
+					<h3>themes</h3>
+					<div>
+						<ul>
+							<li class="notlit">business and operational benefits and implications</li>
+							<li class="highlit">what is a chassis</li>
+							<li class="notlit">key architectural concerns</li>
+							<li class="notlit">technical demonstration</li>
+						</ul>
+					</div>
 					<section>
 
 						<h3>deployment chasis - what and why?</h3>
@@ -274,17 +260,15 @@
 					</section>
 				</section>
 				<section>
-					<section>
-						<h3>themes</h3>
-						<div>
-							<ul>
-								<li class="notlit">business and operational benefits and implications</li>
-								<li class="notlit">what is a chassis</li>
-								<li class="highlit">key architectural concerns</li>
-								<li class="notlit">technical demonstration</li>
-							</ul>
-						</div>
-					</section>
+					<h3>themes</h3>
+					<div>
+						<ul>
+							<li class="notlit">business and operational benefits and implications</li>
+							<li class="notlit">what is a chassis</li>
+							<li class="highlit">key architectural concerns</li>
+							<li class="notlit">technical demonstration</li>
+						</ul>
+					</div>
 					<section>
 						<h3>architecture driven engineering</h3>
 
